--- a/views/process.html
+++ b/views/process.html
@@ -257,7 +257,7 @@ RK5CYII=' id='frame' style="display: none;"/>
 
 <canvas id="result" width="500" height="500" style="width:500px;height:500px;overflow:hidden;display: none"></canvas>
 <script>
-$(document).ready(function(){
+angular.element(document).ready(function(){
   $("#target").attr('src', localStorage.img);
 })
 
