--- a/views/downloadImage.html
+++ b/views/downloadImage.html
@@ -1,4 +1,5 @@
-﻿<div class="span3 offset2">
+﻿<p>{{desc}}</p>
+<div class="span3 offset2">
 	<span class="btn btn-large btn-success fileinput-button">
       <i class="icon-plus icon-white"></i>
       <span>{{btnText}}</span>
