--- a/views/process.html
+++ b/views/process.html
@@ -318,7 +318,11 @@ function cropImage() {
 }
 </script>
 
+<span class="btn btn-success fileinput-button " onclick="window.location.href='/'">
+    <i class="icon-chevron-left icon-white"></i>
+    <span>{{btn.back}}</span>
+</span>
 <span class="btn btn-success fileinput-button pull-right" onclick="cropImage();">
-    <span>{{btnText}}</span>
+    <span>{{btn.next}}</span>
     <i class="icon-chevron-right icon-white"></i>
 </span>
