--- a/views/downloadImage.html
+++ b/views/downloadImage.html
@@ -1,4 +1,4 @@
-﻿<p>{{desc}}</p>
+<center><h4 style="margin-bottom: 30px;">{{desc}}</h4></center>
 <div class="span3 offset2">
 	<span class="btn btn-large btn-success fileinput-button">
       <i class="icon-plus icon-white"></i>
