--- a/views/process.html
+++ b/views/process.html
@@ -2,7 +2,7 @@
 <script src="../static/js/jquery.Jcrop.min.js"></script>
 <script src="../static/js/jquery.color.js"></script>
 <link href="../static/css/jquery.Jcrop.min.css" rel="stylesheet">
-<img id="target"/>
+<center style="margin-bottom: 20px"><img id="target"/ ></center>
 <img src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAABmJLR0QA7ADsAOwdIxY2AAAACXBI
 WXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH3QYOFSITNApBpwAACh9JREFUeNrt3cGN4DgMBEBqMPmH
 diHZ+9jLYAWY3agKQZ9Gk7J85v3vHQAg2o8jAIB8v6OfA0B+oB9nAADxjNwBoKGhG7kDQEGgG7kD
