--- a/views/downloadImage.html
+++ b/views/downloadImage.html
@@ -1,9 +1,16 @@
 <center><h4 style="margin-bottom: 30px;">{{desc}}</h4></center>
 <div class="span3 offset2">
 	<span class="btn btn-large btn-success fileinput-button">
-      <i class="icon-plus icon-white"></i>
-      <span>{{btnText}}</span>
-      <input type="file" id="files" name="files[]" accept="image/jpeg,image/png,image/gif"/> 
+    <i class="icon-plus icon-white"></i>
+    <span>{{btnText}}</span>
+    <input type="file" id="files" name="files[]" accept="image/jpeg,image/png,image/gif"/> 
+    <span class="btn" style="margin-top: 20px;">
+  		<script type="text/javascript" src="//yandex.st/share/share.js"
+charset="utf-8"></script>
+			<div class="yashare-auto-init" data-yashareL10n="ru"
+ data-yashareType="link" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,gplus,surfingbird" data-yashareLink="http://apple.uprt.ru" data-yashareImage="http://apple.uprt.ru/static/ico/apple-touch-icon-144-precomposed.png"
+></div> 
+  	</span>
   </span>
 </div>
 
