--- a/views/results.html
+++ b/views/results.html
@@ -1,6 +1,14 @@
 <div class="span8">
 	<div id="output"></div>
- 	</div>
+	<span class="btn" style="margin-top: 20px;">
+  	<script type="text/javascript" src="//yandex.st/share/share.js"
+charset="utf-8"></script>
+<div class="yashare-auto-init" data-yashareL10n="ru"
+ data-yashareType="link" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,gplus,pinterest,surfingbird" data-yashareLink="http://apple.uprt.ru" data-yashareImage="http://apple.uprt.ru/static/ico/apple-touch-icon-144-precomposed.png"
+
+></div> 
+  </span>
+</div>
  </body>
  </html>
  <script>
