--- a/views/results.html
+++ b/views/results.html
@@ -1,4 +1,4 @@
-<div class="span8">
+<center>
 	<div id="output"></div>
 	<span class="btn" style="margin-top: 20px;">
   	<script type="text/javascript" src="//yandex.st/share/share.js"
@@ -8,7 +8,7 @@ charset="utf-8"></script>
 
 ></div> 
   </span>
-</div>
+</center>
  </body>
  </html>
  <script>
